<resources>
    <string name="app_name">GymCoach</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_scheduled">Scheduled</string>
    <string name="menu_exercises">Exercises</string>
    <string name="menu_trainings">Trainings</string>
    <string name="menu_statistics">Achievements</string>
    <string name="menu_settings">Settings</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login / Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_exercise">New Exercise</string>
    <string name="scheduled_training">Scheduled Training</string>
    <string name="exercise">Exercise</string>
    <string name="new_training">New Training</string>
    <string name="set">Set</string>
    <string name="training">Training</string>
    <string name="training_name">Training Name</string>
    <string name="training_description">Description</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="cycles_text">Sets: </string>
    <string name="repetitions_text">Repetitions: </string>
    <string name="exercise_image">Exercise image</string>
    <string name="set_exercise">Exercise: </string>
    <string name="choose_exercise">Choose</string>
    <string name="set_cycles">Sets: </string>
    <string name="repetitions_per_set">Repetitions per set: </string>
    <string name="sets">Exercises:</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="exercises">Exercises</string>
    <string name="new_set">Training Exercise</string>
    <string name="icon_description">Icon Description</string>
    <string name="set_exercise_icon">Set exercise icon</string>
    <string name="schedule_new_training">Schedule new training</string>
    <string name="schedule_existing_training">Schedule existing training</string>
    <string name="date">Date</string>
    <string name="pick_date_and_time">Pick date and time</string>
    <string name="scheduled_training_icon">Scheduled training icon</string>
    <string name="trainings">Trainings</string>
    <string name="exercise_icon">Icon:</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="calibrate">Calibrate</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="calibration_directions">To calibrate your exercise step counter, press START and perform at least 20 repetitions, as best as you can. You can press PAUSE to take a rest and then START to continue. To save or reset the calibration, press the appropriate buttons.</string>
    <string name="exact_number_of_repetitions">Exact number of repetitions you did</string>
    <string name="left_hand">Left Hand</string>
    <string name="right_hand">Right Hand</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="bluetooth_settings">Bluetooth settings</string>
    <string name="devices_connection">Bands Connection</string>
    <string name="connect">Connect</string>
    <string name="pause_cycles">Pause between sets:</string>
    <string name="pause_sets">Pause Between Exercises (sec)</string>
    <string name="minutes_hint">(sec)</string>
    <string name="filler">Filler</string>
    <string name="just_do_it">Just Do It</string>
    <string name="intro_text"> YOUR PERSONAL\nGYM COACH</string>
    <string name="version">version 0.0.1 (pre alpha)</string>
    <string name="no_rights_reserved">\u00A9 no rights reserved</string>
    <string name="intro_text_21">(you never knew</string>
    <string name="intro_text_22">you needed)</string>
    <string name="cycles_left">Sets left:</string>
    <string name="repetitions_left">Repetitions left:</string>
    <string name="current_set">Current set:</string>
    <string name="scheduled_trainings">Scheduled Trainings</string>
    <string name="pick_other_training">Pick other training</string>
    <string name="counter">COUNTER</string>
    <string name="message">MESSAGE</string>
    <string name="locked">locked</string>
    <string name="statistics_description">Here we could show your statistics and achievements but instead you\'ve got a random chart from google. Who needs statistics anyway...</string>
</resources>