<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/newTrainingMainLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".SetActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginHorizontal="30dp">

    <TextView
        android:id="@+id/set_exercise_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/set_exercise"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChooseExercise"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:drawableBottom="@drawable/more_button"
        app:layout_constraintStart_toEndOf="@+id/set_exercise_text"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/setExerciseImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/set_exercise_text"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/set_exercise_icon" />

    <TextView
        android:id="@+id/set_cycles_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/set_cycles"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_exercise_text" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/set_cycles_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/set_cycles_text"
        app:layout_constraintTop_toBottomOf="@+id/set_exercise_text"
        app:np_dividerColor="@color/black"
        app:np_height="180dp"
        app:np_max="50"
        app:np_min="1"
        app:np_selectedTextColor="@color/black"
        app:np_selectedTextSize="15sp"
        app:np_textColor="@color/black"
        app:np_textSize="18sp"
        app:np_value="1"
        app:np_width="64dp" />

    <TextView
        android:id="@+id/set_repetitions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/repetitions_per_set"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_cycles_text" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/set_repetitions_number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/set_repetitions_text"
        app:layout_constraintTop_toBottomOf="@+id/set_cycles_text"
        app:np_dividerColor="@color/black"
        app:np_height="180dp"
        app:np_max="100"
        app:np_min="1"
        app:np_selectedTextColor="@color/black"
        app:np_selectedTextSize="15sp"
        app:np_textColor="@color/black"
        app:np_textSize="18sp"
        app:np_value="1"
        app:np_width="64dp" />

    <TextView
        android:id="@+id/pause_cycles_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/pause_cycles"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_repetitions_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pauseCyclesTextContainer"
        android:layout_width="90dp"
        android:layout_marginTop="85dp"
        android:layout_marginStart="10dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_gray"
        app:boxBackgroundMode="none"
        app:layout_constraintStart_toEndOf="@+id/pause_cycles_text"
        app:layout_constraintTop_toBottomOf="@+id/set_repetitions_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pauseCyclesEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="20sp"
            android:hint="@string/minutes_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <View
        android:id="@+id/buttons_separating_line"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginHorizontal="15dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_bar" />

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="6dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnSaveNewSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/save_button"
                android:text="@string/save"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnResetNewSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/reset_button"
                android:text="@string/reset"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnCancelNewSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/cancel_button"
                android:text="@string/cancel"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>




</LinearLayout>